fix: address overlapping elements in chatroom container

--- a/chatapp/src/App.css
+++ b/chatapp/src/App.css
@@ -1,6 +1,9 @@
 #root {
   width:100%;
   text-align: center;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
