--- a/chatapp/src/assets/Chatroom.scss
+++ b/chatapp/src/assets/Chatroom.scss
@@ -14,14 +14,15 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 95vw;
-  height: 90vh;
+  width: 90vw;
+  height: 85vh;
   font-family: $font-descriptions;
   padding: 15px;
+  margin-left: 15px;
 
   #chatroom-div-hidden {
     transform: translateX(-500px); /* Move sidebar off-screen */
-    transition: transform 0.3s ease;
+    transition: transform 1s ease;
     height: 90vh;
   }
 
@@ -30,24 +31,21 @@
     display: flex;
     flex-direction: column;
     margin: 0 0 0 0;
-    height: 90vh;
+    height: 85vh;
     min-width: 350px;
     box-shadow: 2px 2px 15px #606464ea;
 
     #chatroom-header-container {
       display: flex;
       justify-content: center;
-      margin: 0;
       color: white;
-      // background-color: rgb(230, 172, 182);
       background-color: $received-background;
-      display: sticky;
       position: relative;
-      overflow: hidden;
+      z-index: 2;
 
       #chatroom-header {
         margin: 0;
-        padding: 20px 0;
+        padding: 15px 0;
       }
 
       #sidebar-icon {
@@ -60,7 +58,6 @@
     }
 
     #chatroom-container {
-      height: 90vh;
       overflow-x: hidden;
       overflow-y: auto;
       scrollbar-color: $gray #dbe0e6; /* Thumb color and track color for firefox*/
@@ -122,7 +119,7 @@
     display: grid;
     height: 100px;
     // background-color: rgb(246, 246, 247);
-    border-bottom: 1px solid rgb(216, 233, 231);
+    // border-bottom: 1px solid rgb(216, 233, 231);
 
     &:hover {
       background-color: rgba(144, 143, 143, 0.242);
